Fixed render bug that appears on small trees, fixed image scaling

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ Sidebar
 
 .titleWrapper {
   height: 75%;
+  
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
@@ -198,8 +199,8 @@ Sidebar
 }
 
 .imageContainer img {
-  width: 19vw;
-  height: 28.5vw;
+  width: 90%;
+  height: auto;
   object-fit: cover;
 }
 
